Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3006

failover nids added after format don't propogate to clients

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • Lustre 2.3.61 server. The lack of failover nids in the osc imports field also happens on 1.8 clients so it is a server side issue.
    • 3
    • 7319

      While preparing for our test shot after we formatted the new file system we remembered to add the failover nids for IR testing. So we umounted the file system and used tunefs.lustre to add the failover nids. Then proceeded remount the file system in order of MGS, MDT, then serially the OSTs. After mounting a client to validate that the proper failover nids toke hold we discovered that in the osc imports failover nids were never updated. So with a second try we ran tunefs.lustre to remove the failover nids. Then started and stopped the file system. Added the failover nids with tunefs.lustre and then restarted the file system the second time. Again lctl get_param osc-*..../import | grep failover_nids did not show the failover nids getting updated.

            bzzz Alex Zhuravlev
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: