LU-3006 obdclass: pass disk conf param to kernel

Commit 31db8f9cf048ef93477951e12a166722e777a2da has disabled
LDD_F_UPDATE in mti->mti_flags and only enable it when 'writeconf'
is used or for the newly formatted target. This will fail to pass
failnode params set by tunefs.lustre.

This patch passes LDD_F_UPDATE flag directly down to mti_flags
despite whether it is set through mkfs or by tunefs.

Also fixes two test script glitches.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I7052dcf6e932797ab5ba03331e74e77376e7a28c